# unocalc

./: .editorconfig  .gitignore  .rustfmt.toml  CONTRIBUTORS.txt  Cargo.toml  LICENSE  README.md  gulpfile.js  index.html  package-lock.json  package.json  structure.txt  vercel.json
app/: .prettierrc.json  .travis.yml  index.html  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  pwa-assets.config.ts  vercel.json  vite.config.ts
app/public/: manifest.webmanifest
app/src/: main.ts  vite-env.d.ts
client/: config.json  index.html  package-lock.json  package.json  pwa-assets.config.ts  tailwind-config.json  tailwind.config.js  vite.config.ts
client/public/: manifest.webmanifest
css/: main.css
js/: index.js  range.js
pkg/: LICENSE.txt  README.md  index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  lendycalc.d.ts  lendycalc.js  lendycalc_bg.js  lendycalc_bg.wasm  lendycalc_bg.wasm.d.ts  package.json  unocalc.d.ts  unocalc.js  unocalc_bg.js  unocalc_bg.wasm  unocalc_bg.wasm.d.ts
scss/: main.scss
scss/abstracts/: _breakpoints.scss  _colors.scss  _functions.scss  _index.scss  _media-query.scss  _mixins.scss  _mixs.scss  _rule.scss  _type-scale.scss  _type.scss
scss/base/: _config.scss  _index.scss  _reset.scss  _root.scss  _utilities.scss
scss/components/: _buttons.scss  _display.scss  _index.scss  _input.scss  _input1.scss  (+4 more)
src/: calculator_builder.rs  evaluator.rs  expr_node.rs  lexer.rs  lib.rs  main.rs  models.rs  number.rs  operation.rs  parser.rs  schema.rs  utils.rs
styles/: main.css
tests/: node.rs  unit.rs  web.rs
(+30 files in other folders)
